Parse ***TOPICS*** and ***TOPLIST***
When Topics = is used in the list configuraiton, the QUERY ***GUI***
outputs lines with ***TOPICS*** and ***TOPLIST*** which were not parsed
correctly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+10.02.2012 Add ability to parse ******TOPICS*** and ***TOPLIST*** in the answer of QUERY ***GUI***
+
 23.02.2011 Include checks for values returned by malloc and strdup.
 
 22.02.2011 Relese 1.0.2
