--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+17.03.2012 Bugfix: avoid stack overflow when retrieving lage listname.logXXX files, use malloc()/free() instead of alloca().
+
 10.02.2012 Add ability to parse ******TOPICS*** and ***TOPLIST*** in the answer of QUERY ***GUI***
 
 23.02.2011 Include checks for values returned by malloc and strdup.
