configure.ac: add AM_PROG_AR
Automake 1.12 says we need it.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+25.04.2012 Upgrade to Automake 1.12
+
 17.03.2012 Bugfix: avoid stack overflow when retrieving lage listname.logXXX files
 
 10.02.2012 Add ability to parse ******TOPICS*** and ***TOPLIST*** in the answer of QUERY ***GUI***
