--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+25.04.2012 Upgrade to Automake 1.12 and add AM_PROG_AR to configure.ac on request of Automake
+
 17.03.2012 Bugfix: avoid stack overflow when retrieving lage listname.logXXX files, use malloc()/free() instead of alloca().
 
 10.02.2012 Add ability to parse ******TOPICS*** and ***TOPLIST*** in the answer of QUERY ***GUI***
