sieve_scripts: bug for lists with no subscribers and Send=Private
For lists with no subscribers and Send = Private, the generated Sieve
script for the list has inserted "if not" and then was supposed to insert
"address ", but as there were no addresses, the "if not" was left alone.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+20.05.2012 fix a problem with generated scripts, that had no subscribers and Send = Private.  The generated scripts for sucht lists were syntactically incorrect.
+
 20.05.2012 move liblistserv_stringlist_ functions from src/sieve_scripts.c to src/stringlist.c
 
 20.05.2012 Fix declarations for marking external/internal functions in terms of ELF-visibility.
