sieve_scripts: add support for INCLUDE extension

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+15.07.2012 Add support for INCLUDE sieve extension to the generated Sieev scripts.
+
 20.05.2012 Bugfix: there was a problem generating sieve scripts for list without subscribers and Send = Private.
 
 25.04.2012 Upgrade to Automake 1.12
