Read some files from the filesystem, instead of using TCPGUI
When liblistserv is ./configure'd --with-filesystem it reads LOG, CHANGELOG,
WWWTPL and MAILTPL files, as well as the list of files available for a mailing
list, directly from the filesystem, bypassing TCPGUI.

This changes the security concept slightly, as now a file is read when the user
has access to the file, contrary to the permissions based on LISTSERV
credentials.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.07.2015 Add possibility to read wwwtpl, mailtpl, changelog and log files
+	directly from the filesystem, enabled when ./configure --with-filesystem
+
 19.09.2013 Move gnulib directory from src/gnulib/ to lib/
 19.09.2013 Remove the word template from liblilistserv.h, so that file can be included in C++ code.
 
